force-app/main/default/objects/RCC__c/RCC__c.object-meta.xml
<CustomObject>
    <label>RCC</label>
    <nameField>
        <label>Name Of Entity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RCCs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>