force-app/main/default/objects/RCC__c/fields/AdversePartyForensic__c.field-meta.xml
<CustomField>
    <fullName>AdversePartyForensic__c</fullName>
    <description>Adverse Party for Forensic Investigations.</description>
    <inlineHelpText>Adverse Party for Forensic Investigations.</inlineHelpText>
    <label>Adverse Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>