force-app/main/default/objects/RCC__c/fields/AdversePartyLegal__c.field-meta.xml
<CustomField>
    <fullName>AdversePartyLegal__c</fullName>
    <description>Adverse Party for Legal Services.</description>
    <inlineHelpText>Adverse Party for Legal Services.</inlineHelpText>
    <label>Adverse Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>