force-app/main/default/objects/RCC__c/fields/AdversePartyRecovery__c.field-meta.xml
<CustomField>
    <fullName>AdversePartyRecovery__c</fullName>
    <description>Adverse Party for Recovery and Reorganisation.</description>
    <inlineHelpText>Adverse Party for Recovery and Reorganisation.</inlineHelpText>
    <label>Adverse Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>