force-app/main/default/objects/RCC__c/fields/Advisory_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Sub_Category__c</fullName>
    <label>Advisory Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provision of audit training, accountancy and software training</fullName>
            </value>
            <value>
                <fullName>Business consulting services</fullName>
            </value>
            <value>
                <fullName>Business Process Solutions</fullName>
            </value>
            <value>
                <fullName>Business risk services</fullName>
            </value>
            <value>
                <fullName>Company formation, secretarial registration and directorship services</fullName>
            </value>
            <value>
                <fullName>Forensic investigations</fullName>
            </value>
            <value>
                <fullName>Legal services</fullName>
            </value>
            <value>
                <fullName>Recovery and Reorganisation</fullName>
            </value>
            <value>
                <fullName>Transaction services</fullName>
            </value>
            <value>
                <fullName>Other advisory services (Please describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>