force-app/main/default/objects/RCC__c/fields/Assurance_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Assurance_Sub_Category__c</fullName>
    <label>Assurance Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Entity</fullName>
            </value>
            <value>
                <fullName>Public Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>