force-app/main/default/objects/RCC__c/fields/Audit_Assurance_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Audit_Assurance_Sub_Category__c</fullName>
    <label>Audit &amp; Assurance Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit and/or Review of Financial Statements</fullName>
            </value>
            <value>
                <fullName>Financial reporting advisory</fullName>
            </value>
            <value>
                <fullName>Other Assurance services</fullName>
            </value>
            <value>
                <fullName>Others Services (Please describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>