force-app/main/default/objects/RCC__c/fields/Business_Consulting_Services__c.field-meta.xml
<CustomField>
    <fullName>Business_Consulting_Services__c</fullName>
    <label>Business Consulting Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business consulting type - Operational improvement</fullName>
            </value>
            <value>
                <fullName>Business consulting type - Technology</fullName>
            </value>
            <value>
                <fullName>Business consulting type - Business transformation</fullName>
            </value>
            <value>
                <fullName>Business consulting type - Financial management</fullName>
            </value>
            <value>
                <fullName>Business consulting type - Strategy</fullName>
            </value>
            <value>
                <fullName>Business consulting type - Human capital</fullName>
            </value>
            <value>
                <fullName>Business consulting type - Data analysis</fullName>
            </value>
            <value>
                <fullName>Business consulting type - Programme management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>