force-app/main/default/objects/RCC__c/fields/Business_Process_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Solutions__c</fullName>
    <label>Business Process Solutions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Process Solutions - Business process outsourcing and shared service centre</fullName>
            </value>
            <value>
                <fullName>Business Process Solutions - Back office outsourcing</fullName>
            </value>
            <value>
                <fullName>Business Process Solutions - Global compliance and reporting solutions (GCRS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>