force-app/main/default/objects/RCC__c/fields/Business_Risk_Services__c.field-meta.xml
<CustomField>
    <fullName>Business_Risk_Services__c</fullName>
    <label>Business Risk Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business risk type - Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Business risk type - Governance and risk management</fullName>
            </value>
            <value>
                <fullName>Business risk type - Internal audit</fullName>
            </value>
            <value>
                <fullName>Business risk type - Regulatory services</fullName>
            </value>
            <value>
                <fullName>Business risk type - Risk modelling services</fullName>
            </value>
            <value>
                <fullName>Business risk type - Special attestation services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>