force-app/main/default/objects/RCC__c/fields/BusinessRelationshipSubCategory__c.field-meta.xml
<CustomField>
    <fullName>BusinessRelationshipSubCategory__c</fullName>
    <label>Business Relationship Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor relationships</fullName>
            </value>
            <value>
                <fullName>Lease agreements</fullName>
            </value>
            <value>
                <fullName>Contractor/subcontractor for client services</fullName>
            </value>
            <value>
                <fullName>Joint venture</fullName>
            </value>
            <value>
                <fullName>Other business relationships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>