force-app/main/default/objects/RCC__c/fields/CategoryofProposedServices__c.field-meta.xml
<CustomField>
    <fullName>CategoryofProposedServices__c</fullName>
    <label>Category of Proposed Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit &amp; Assurance</fullName>
            </value>
            <value>
                <fullName>Board of Directors (officer) appointment</fullName>
            </value>
            <value>
                <fullName>Business relationship</fullName>
            </value>
            <value>
                <fullName>Non-Audit</fullName>
            </value>
            <value>
                <fullName>Others Services (Please describe)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>