force-app/main/default/objects/RCC__c/fields/CirculateThisCheckToPartnersYN__c.field-meta.xml
<CustomField>
    <fullName>CirculateThisCheckToPartnersYN__c</fullName>
    <description>In case of an IRC, do you want the responding firm(s) to circulate this check to all their partners?</description>
    <inlineHelpText>In case of an IRC, do you want the responding firm(s) to circulate this check to all their partners?</inlineHelpText>
    <label>Circulate This Check To Partners (Y/N)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>