force-app/main/default/objects/RCC__c/fields/Circulation_Group__c.field-meta.xml
<CustomField>
    <fullName>Circulation_Group__c</fullName>
    <label>Circulation Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Users</fullName>
            </value>
            <value>
                <fullName>For NRCC</fullName>
            </value>
            <value>
                <fullName>Partner and Director</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>