force-app/main/default/objects/RCC__c/fields/Client_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Client_Contacts__c</fullName>
    <label>Client Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>