force-app/main/default/objects/RCC__c/fields/ClientNameText__c.field-meta.xml
<CustomField>
    <fullName>ClientNameText__c</fullName>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>