force-app/main/default/objects/RCC__c/fields/Company_Formation_Secretarial_Services__c.field-meta.xml
<CustomField>
    <fullName>Company_Formation_Secretarial_Services__c</fullName>
    <description>Company formation, secretarial registration and directorship services.</description>
    <inlineHelpText>Company formation, secretarial registration and directorship services.</inlineHelpText>
    <label>Company Formation, Secretarial Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company formation, secretarial registration and directorship services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>