force-app/main/default/objects/RCC__c/fields/CountryofFinancialExchange__c.field-meta.xml
<CustomField>
    <fullName>CountryofFinancialExchange__c</fullName>
    <label>Country of Financial Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTLocationCountry</valueSetName>
    </valueSet>
</CustomField>