force-app/main/default/objects/RCC__c/fields/CountryofFinancialExchangeAssurance__c.field-meta.xml
<CustomField>
    <fullName>CountryofFinancialExchangeAssurance__c</fullName>
    <description>Country of Financial Exchange for Assurance.</description>
    <inlineHelpText>Country of Financial Exchange for Assurance.</inlineHelpText>
    <label>Country of Financial Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTLocationCountry</valueSetName>
    </valueSet>
</CustomField>