force-app/main/default/objects/RCC__c/fields/DaysLeftToExpire__c.field-meta.xml
<CustomField>
    <fullName>DaysLeftToExpire__c</fullName>
    <formula>ExpiryDate__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left To Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>