force-app/main/default/objects/RCC__c/fields/Description_of_Proposed_Business_Reltion__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Proposed_Business_Reltion__c</fullName>
    <description>Please provide a description of the proposed business relationship.</description>
    <inlineHelpText>Please provide a description of the proposed business relationship.</inlineHelpText>
    <label>Description of Proposed Business Reltion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>