force-app/main/default/objects/RCC__c/fields/DomesticRelationshipReportedInTime__c.field-meta.xml
<CustomField>
    <fullName>DomesticRelationshipReportedInTime__c</fullName>
    <description>In case of domestic relationship check, how far back in time do you want relationship to be reported</description>
    <inlineHelpText>In case of domestic relationship check, how far back in time do you want relationship to be reported</inlineHelpText>
    <label>Domestic Relationship Reported In Time</label>
    <type>Date</type>
</CustomField>