force-app/main/default/objects/RCC__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial statement audit - Group Auditor</fullName>
            </value>
            <value>
                <fullName>Financial statement audit - Component Auditor</fullName>
            </value>
            <value>
                <fullName>Financial statement audit - Statutory Auditor</fullName>
            </value>
            <value>
                <fullName>Financial statement audit - Component &amp; Statutory Auditor</fullName>
            </value>
            <value>
                <fullName>Financial statement review</fullName>
            </value>
            <value>
                <fullName>Other audit services - Please provide below specific details on the audit services being performed:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>