force-app/main/default/objects/RCC__c/fields/EngagementNarrative__c.field-meta.xml
<CustomField>
    <fullName>EngagementNarrative__c</fullName>
    <label>Engagement Narrative</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>