force-app/main/default/objects/RCC__c/fields/EngagementPartner__c.field-meta.xml
<CustomField>
    <fullName>EngagementPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RCCs1</relationshipName>
    <type>Lookup</type>
</CustomField>