force-app/main/default/objects/RCC__c/fields/EngagementTypeAssurance__c.field-meta.xml
<CustomField>
    <fullName>EngagementTypeAssurance__c</fullName>
    <description>Engagement Type for Assurance Sub Category.</description>
    <inlineHelpText>Engagement Type for Assurance Sub Category.</inlineHelpText>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial statement compilation</fullName>
            </value>
            <value>
                <fullName>Reporting on controls at a service organization</fullName>
            </value>
            <value>
                <fullName>Agreed upon procedures</fullName>
            </value>
            <value>
                <fullName>Other assurance - Please provide below specific details on the assurance services being performed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>