force-app/main/default/objects/RCC__c/fields/EngagementTypePublic__c.field-meta.xml
<CustomField>
    <fullName>EngagementTypePublic__c</fullName>
    <description>Engagement Type for Public Entity.</description>
    <inlineHelpText>Engagement Type for Public Entity.</inlineHelpText>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial statement audit - Group Auditor: Yes, the report will be filed with a national regulator or exchange outside of your member firm&apos;s home country.</fullName>
            </value>
            <value>
                <fullName>Financial statement audit - Group Auditor: No, the report will not be filed with a national regulator or exchange outside of your member firm&apos;s home country.</fullName>
            </value>
            <value>
                <fullName>Financial statement audit - Component Auditor</fullName>
            </value>
            <value>
                <fullName>Financial statement audit - Statutory Auditor</fullName>
            </value>
            <value>
                <fullName>Financial statement audit - Component &amp; Statutory Auditor</fullName>
            </value>
            <value>
                <fullName>Financial statement review</fullName>
            </value>
            <value>
                <fullName>Other audit services - Please provide below specific details on the audit services being performed:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>