force-app/main/default/objects/RCC__c/fields/EntitysLocationCountry__c.field-meta.xml
<CustomField>
    <fullName>EntitysLocationCountry__c</fullName>
    <label>Entity&apos;s Location (Country)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTLocationCountry</valueSetName>
    </valueSet>
</CustomField>