force-app/main/default/objects/RCC__c/fields/EntitysWebsiteorURL__c.field-meta.xml
<CustomField>
    <fullName>EntitysWebsiteorURL__c</fullName>
    <label>Entity&apos;s Website or URL</label>
    <type>Url</type>
</CustomField>