force-app/main/default/objects/RCC__c/fields/Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client__c</fullName>
    <label>Existing Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>