force-app/main/default/objects/RCC__c/fields/ExpertiseText__c.field-meta.xml
<CustomField>
    <fullName>ExpertiseText__c</fullName>
    <label>Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>