force-app/main/default/objects/RCC__c/fields/Explain_Reason__c.field-meta.xml
<CustomField>
    <fullName>Explain_Reason__c</fullName>
    <description>In case, public audit service is not proposed, please explain the reason for selected - whether or not</description>
    <inlineHelpText>In case, public audit service is not proposed, please explain the reason for selected - whether or not</inlineHelpText>
    <label>Reason For Not Proposed Audit Service</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>