force-app/main/default/objects/RCC__c/fields/Forensic_Investigations__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Investigations__c</fullName>
    <label>Forensic Investigations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disputes</fullName>
            </value>
            <value>
                <fullName>Forensic Investigations</fullName>
            </value>
            <value>
                <fullName>Digital forensics</fullName>
            </value>
            <value>
                <fullName>Cybercrime</fullName>
            </value>
            <value>
                <fullName>Anti-financial crime advisory/corporate compliance</fullName>
            </value>
            <value>
                <fullName>Accounting irregularity/misconduct</fullName>
            </value>
            <value>
                <fullName>Corporate intelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>