force-app/main/default/objects/RCC__c/fields/Global_Industry_Sectors__c.field-meta.xml
<CustomField>
    <fullName>Global_Industry_Sectors__c</fullName>
    <label>Global Industry Sectors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector</valueSetName>
    </valueSet>
</CustomField>