force-app/main/default/objects/RCC__c/fields/Global_Market_Segments__c.field-meta.xml
<CustomField>
    <fullName>Global_Market_Segments__c</fullName>
    <label>Global Market Segments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>