force-app/main/default/objects/RCC__c/fields/HowFarBackRelationshipToBeReported__c.field-meta.xml
<CustomField>
    <fullName>HowFarBackRelationshipToBeReported__c</fullName>
    <description>In case of an IRC, how far back in time do you want relationship to be reported</description>
    <inlineHelpText>In case of an IRC, how far back in time do you want relationship to be reported</inlineHelpText>
    <label>How Far Back Relationship To Be Reported</label>
    <type>Date</type>
</CustomField>