force-app/main/default/objects/RCC__c/fields/Identify_and_include_on_family_tree_tab3__c.field-meta.xml
<CustomField>
    <fullName>Identify_and_include_on_family_tree_tab3__c</fullName>
    <description>Please identify the PE/VC group(s) here and include them as a related entity on the family tree tab</description>
    <inlineHelpText>Please identify the PE/VC group(s) here and include them as a related entity on the family tree tab</inlineHelpText>
    <label>Identify and include on family tree tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>