force-app/main/default/objects/RCC__c/fields/IfExpAuditSelectTypeOfAppointment__c.field-meta.xml
<CustomField>
    <fullName>IfExpAuditSelectTypeOfAppointment__c</fullName>
    <label>If Exp=Audit,Select Type Of Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment as auditor</fullName>
            </value>
            <value>
                <fullName>Appointment as first auditor</fullName>
            </value>
            <value>
                <fullName>Continuing appointment</fullName>
            </value>
            <value>
                <fullName>Filling up Casual Vacancy</fullName>
            </value>
            <value>
                <fullName>Reappointment as an Auditor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>