force-app/main/default/objects/RCC__c/fields/InternationalOperationsYN__c.field-meta.xml
<CustomField>
    <fullName>InternationalOperationsYN__c</fullName>
    <inlineHelpText>Guidance :
International operations mean all of a company’s operating locations of business that exist in other countries, including locations of all related entities. Operating locations include administrative, sales, retail, ser-vice, manufacturing, assembly, distribution or warehouse facilities.</inlineHelpText>
    <label>International Operations (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>