force-app/main/default/objects/RCC__c/fields/Is_the_audit_service_engagement_for_an_S__c.field-meta.xml
<CustomField>
    <fullName>Is_the_audit_service_engagement_for_an_S__c</fullName>
    <description>Is the audit service engagement for an SEC registrant?</description>
    <inlineHelpText>Is the audit service engagement for an SEC registrant?</inlineHelpText>
    <label>Is audit service engagement for SEC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>