force-app/main/default/objects/RCC__c/fields/IsauditserviceengagementforSECAssurance__c.field-meta.xml
<CustomField>
    <fullName>IsauditserviceengagementforSECAssurance__c</fullName>
    <description>Is the assurance service engagement for an SEC registrant? for Assurance.</description>
    <inlineHelpText>Is the assurance service engagement for an SEC registrant?</inlineHelpText>
    <label>Is audit service engagement for SEC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>