force-app/main/default/objects/RCC__c/fields/IsEntityAddedInRestrictedList__c.field-meta.xml
<CustomField>
    <fullName>IsEntityAddedInRestrictedList__c</fullName>
    <description>Should the entity be added to the Restricted List to comply with SEBI (Prohibition of Insider Trading) Regulations, 2015?</description>
    <inlineHelpText>Should the entity be added to the Restricted List to comply with SEBI (Prohibition of Insider Trading) Regulations, 2015?</inlineHelpText>
    <label>Is Entity Added In Restricted List ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>