force-app/main/default/objects/RCC__c/fields/Legal_Services__c.field-meta.xml
<CustomField>
    <fullName>Legal_Services__c</fullName>
    <label>Legal Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>