force-app/main/default/objects/RCC__c/fields/LocationForensic__c.field-meta.xml
<CustomField>
    <fullName>LocationForensic__c</fullName>
    <description>Location for Forensic Investiations.</description>
    <inlineHelpText>Location for Forensic Investigations.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>