force-app/main/default/objects/RCC__c/fields/LocationLegal__c.field-meta.xml
<CustomField>
    <fullName>LocationLegal__c</fullName>
    <description>Location for Legal Services.</description>
    <inlineHelpText>Location for Legal Services.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>