force-app/main/default/objects/RCC__c/fields/LocationRecovery__c.field-meta.xml
<CustomField>
    <fullName>LocationRecovery__c</fullName>
    <description>Location for Recovery and Reorganisation.</description>
    <inlineHelpText>Location for Recovery and Reorganisation.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>