force-app/main/default/objects/RCC__c/fields/LocationTransaction__c.field-meta.xml
<CustomField>
    <fullName>LocationTransaction__c</fullName>
    <description>Location for Transaction Services.</description>
    <inlineHelpText>Location for Transaction Services.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>