force-app/main/default/objects/RCC__c/fields/NameofFinancialExchange__c.field-meta.xml
<CustomField>
    <fullName>NameofFinancialExchange__c</fullName>
    <label>Name of Financial Exchange</label>
    <type>TextArea</type>
</CustomField>