force-app/main/default/objects/RCC__c/fields/NameofFinancialExchangeAssurance__c.field-meta.xml
<CustomField>
    <fullName>NameofFinancialExchangeAssurance__c</fullName>
    <description>Name of Financial Exchange for Assurance.</description>
    <inlineHelpText>Name of Financial Exchange for Assurance.</inlineHelpText>
    <label>Name of Financial Exchange</label>
    <type>TextArea</type>
</CustomField>