force-app/main/default/objects/RCC__c/fields/NameOfTheGlobalUltimateParent__c.field-meta.xml
<CustomField>
    <fullName>NameOfTheGlobalUltimateParent__c</fullName>
    <label>Name Of The Global Ultimate Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>