force-app/main/default/objects/RCC__c/fields/NameOfTheImmediateHoldingCompany__c.field-meta.xml
<CustomField>
    <fullName>NameOfTheImmediateHoldingCompany__c</fullName>
    <label>Name Of The Immediate Holding Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>