force-app/main/default/objects/RCC__c/fields/NonAuditSubCategory__c.field-meta.xml
<CustomField>
    <fullName>NonAuditSubCategory__c</fullName>
    <label>Non-Audit Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>Other (Please describe)</fullName>
            </value>
            <value>
                <fullName>Outsourcing</fullName>
            </value>
            <value>
                <fullName>Tax Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>