force-app/main/default/objects/RCC__c/fields/Normal_course_for_firm_and_vendor__c.field-meta.xml
<CustomField>
    <fullName>Normal_course_for_firm_and_vendor__c</fullName>
    <description>Is the business relationship an arm&apos;s length transaction and in the normal course of business for your firm and the vendor?</description>
    <inlineHelpText>Is the business relationship an arm&apos;s length transaction and in the normal course of business for your firm and the vendor?</inlineHelpText>
    <label>Normal course for firm and vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>